# oniro_openharmony_build

./: .gitignore  OAT.xml  README.en.md  README.md  README_zh.md  compile_standard_whitelist.json  gn_helpers.py  ohos.gni  ohos_var.gni  prebuilts_download.py  prebuilts_download.sh  prebuilts_download_config.json  print_python_deps.py  subsystem_compoents_whitelist.json  subsystem_config.json  subsystem_config_example.json  test.gni  version.gni  zip.py
.gitee/: PULL_REQUEST_TEMPLATE.en.md  (+1 more)
common/musl/: BUILD.gn  ld-musl-aarch64-asan.path  ld-musl-aarch64.path  ld-musl-arm-asan.path  ld-musl-arm.path
common/musl/updater/: BUILD.gn
config/: BUILD.gn  BUILDCONFIG.gn  allocator.gni  arm.gni  config.gni  python.gni  sysroot.gni
config/c++/: c++.gni
config/clang/: clang.gni
config/compiler/: BUILD.gn  compiler.gni
config/compiler/lite/clang/: BUILD.gn  clang.gni
config/compiler/lite/common/: BUILD.gn
config/compiler/lite/gcc/: BUILD.gn  gcc.gni
config/compiler/lite/iccarm/: BUILD.gn  iccarm.gni
config/linux/: BUILD.gn
config/mac/: BUILD.gn  sdk_info.py
config/ohos/: BUILD.gn  abi.gni  config.gni  copy_ex.gni  musl.gni
config/posix/: BUILD.gn  sysroot_ld_path.py
config/rust/: BUILD.gn
config/sanitizers/: BUILD.gn  cfi.versionscript  cfi_blocklist.txt  sanitizers.gni
config/secure/: BUILD.gn  secure_config.gni
config/security/: BUILD.gn  security_config.gni
core/gn/: BUILD.gn  dotfile.gn  loader.gni
ohos/ace/: ace.gni  build_ace.py  build_ace.pydeps  check_signature.py  check_signature.pydeps
ohos/app/: app.gni  app_internal.gni
ohos/native_stub/: native_stub.gni
ohos/ndk/: BUILD.gn  Doxyfile  archive_ndk.py  check_ndk_header.py  check_ndk_header.pydeps  check_ndk_header_signature.py  cmake_patch.sh  collect_ndk_syscap.py  ndk.gni  ndk_targets.gni
ohos/ndk/cmake/: ohos.toolchain.cmake  sdk_native_platforms.cmake
rust/: BUILD.gn  rust_executable.gni  rust_static_library.gni  rust_target.gni  rustc_toolchain.gni  rustc_wrapper.py
rust/clanglibs/: BUILD.gn  find_clanglibs.py  update_depfile.py
rust/hello_world/: BUILD.gn
rust/hello_world/src/: main.rs
rust/hello_world_c/: BUILD.gn
rust/hello_world_c/src/: main.c
rust/rust_log/: BUILD.gn
rust/rust_log/src/: cdylib.h  cdylib.rs  dylib.rs  rlib.rs  staticlib.h  staticlib.rs
rust/src/: BUILD.gn
rust/std/: BUILD.gn  find_std_rlibs.py
rust/tests/: BUILD.gn
rust/tests/test_autocxx/: BUILD.gn
rust/tests/test_autocxx/tests/autocxx_cpp_call_rust/: BUILD.gn
rust/tests/test_autocxx/tests/autocxx_pod/: BUILD.gn
rust/tests/test_autocxx/tests/autocxx_rust_call_cpp/: BUILD.gn
rust/tests/test_autocxx/tests/autocxx_steam_mini/: BUILD.gn
rust/tests/test_bin_cargo_crate/: BUILD.gn
rust/tests/test_bin_cargo_crate/crate/: build.rs
rust/tests/test_bin_cargo_crate/crate/src/: main.rs
rust/tests/test_bin_crate/: BUILD.gn
rust/tests/test_bin_crate/src/: main.rs
rust/tests/test_bindgen_test/test_for_extern_c/: BUILD.gn  test_extern_c.rs
rust/tests/test_bindgen_test/test_for_h/: BUILD.gn  lib.h  main.rs
rust/tests/test_bindgen_test/test_for_hello_world/: BUILD.gn  lib.c  lib.h  lib2.h  main.rs
rust/tests/test_bindgen_test/test_for_hpp/: BUILD.gn  lib.h  lib.hpp  main.rs
rust/tests/test_cdylib_crate/: BUILD.gn
rust/tests/test_cdylib_crate/src/: main.c  simple_printer.h  simple_printer.rs
rust/tests/test_cxx/: BUILD.gn  main.cpp
rust/tests/test_cxx/src/: lib.rs
rust/tests/test_cxx_rust/: BUILD.gn
rust/tests/test_cxx_rust/include/: client_blobstore.h
rust/tests/test_cxx_rust/src/: client_blobstore.cpp  main.rs
rust/tests/test_dylib_crate/: BUILD.gn
rust/tests/test_dylib_crate/src/: main.rs  simple_printer.rs
rust/tests/test_idl/: BUILD.gn  IIdlTestService.idl
rust/tests/test_proc_macro_cargo_crate/: BUILD.gn
rust/tests/test_proc_macro_cargo_crate/crate/src/: lib.rs
rust/tests/test_proc_macro_crate/: BUILD.gn
rust/tests/test_proc_macro_crate/src/: main.rs  simple_printer_macro.rs
rust/tests/test_proc_macro_crate/test_attribute_macro/: BUILD.gn
rust/tests/test_proc_macro_crate/test_attribute_macro/src/: lib.rs  main.rs
rust/tests/test_proc_macro_crate/test_derive_helper_macro/: BUILD.gn
rust/tests/test_proc_macro_crate/test_derive_helper_macro/src/: lib.rs  main.rs
rust/tests/test_proc_macro_crate/test_derive_macro/: BUILD.gn
rust/tests/test_proc_macro_crate/test_derive_macro/src/: lib.rs  main.rs
rust/tests/test_proc_macro_crate/test_function_macro/: BUILD.gn
rust/tests/test_proc_macro_crate/test_function_macro/src/: lib.rs  main.rs
rust/tests/test_rlib_cargo_crate/: BUILD.gn
rust/tests/test_rlib_cargo_crate/crate/: build.rs
rust/tests/test_rlib_crate/: BUILD.gn
rust/tests/test_rlib_crate/src/: main.rs  simple_printer.rs
rust/tests/test_rust_st/: BUILD.gn
rust/tests/test_rust_st/src/: lib.rs
rust/tests/test_rust_st/test/: test.rs
rust/tests/test_rust_ut/: BUILD.gn
rust/tests/test_rust_ut/src/: main.rs
rust/tests/test_static_link/: BUILD.gn
rust/tests/test_static_link/src/: main.rs
rust/tests/test_staticlib_crate/: BUILD.gn
rust/tests/test_staticlib_crate/src/: main.c  simple_printer.h  simple_printer.rs
rust/util/: build_utils.py
rust_example/: BUILD.gn  BUILDCONFIG.gn
rust_example/test_rust_ffi/c_hello_rust/: BUILD.gn  main.c
rust_example/test_rust_ffi/simple_printer/: BUILD.gn  libsimple_c_printer.rs  simple_printer.h
templates/bpf/: BUILD.gn  gen_bpf_uapi.py  ohos_bpf.gni  ohos_bpf_config.gni
templates/common/: asdk_deps_handler.py  check_build_target.py  check_deps_handler.py  check_external_deps.py  check_part_subsystem_name.py  check_target.gni  copy.gni  delete_symbol.py  external_deps_handler.py  ohos_templates.gni
templates/cxx/: cxx.gni  hdi.versionscript  napi.versionscript  prebuilt.gni  singleton.versionscript
templates/rust/: ohos_cargo_crate.gni  ohos_rust_library.gni  run_bindgen.py  run_build_script.py  run_cxxbridge.py  rust_autocxx.gni  rust_autocxx_gen.py  rust_bindgen.gni  rust_bindgen.py  rust_cxx.gni  rust_cxxbridge.py  rust_target_lints.gni  rust_template.gni
(+514 files in other folders)
