declare_args() {
  enable_rust = true
  use_ohos_rust_toolchain = true
  rustc_version = ""
  rust_sysroot_absolute = ""
  is_rust_nightly = true
  is_rust_stable = false
}

rust_base = rebase_path("//prebuilts/rustc", root_build_dir)

if (is_rust_nightly) {
  rust_version = "nightly"
} else {
  rust_version = "1.59.0"
}
rust_path = "${rust_base}/${host_platform_dir}/${rust_version}"
rust_bin = "${rust_path}/bin"
rustc = "${rust_bin}/rustc"

stdlib_host_path = "${rust_path}/lib"

clang = rebase_path("//prebuilts/clang/ohos/linux-x86_64/llvm/bin/clang",
                    root_build_dir)
musl_path = rebase_path("//out/rk3568/obj/third_party/musl", root_build_dir)
musllib =
    rebase_path("//out/rk3568/obj/third_party/musl/usr/lib/arm-linux-ohos/",
                root_build_dir)

#rustc_command_args = "--crate-name {{crate_name}} {{source}} --crate-type {{crate-type}} {{rustflags}}"
