import("//build/config/ohos/config.gni")
import("//build/config/ohos/musl.gni")

declare_args() {
  enable_rust = true
  use_ohos_rust_toolchain = true
  rustc_version = ""
  rust_sysroot_absolute = ""
  is_rust_nightly = true
  is_rust_stable = false
}

rust_base = rebase_path("//prebuilts/rustc", root_build_dir)

if (is_rust_nightly) {
  rust_version = "nightly"
} else {
  rust_version = "1.59.0"
}

rust_path = "${rust_base}/${host_platform_dir}/${rust_version}"
rust_bin = "${rust_path}/bin"
rustc = "${rust_bin}/rustc"
clippy_driver = "${rust_bin}/clippy-driver"

stdlib_host_path = "${rust_path}/lib"

clang = rebase_path("//prebuilts/clang/ohos/linux-x86_64/llvm/bin/clang",
                    root_build_dir)
musl_path = rebase_path("${musl_sysroot}", root_build_dir)
musllib = rebase_path("${musl_sysroot}/usr/lib/${abi_target}", root_build_dir)
#rustc_command_args = "--crate-name {{crate_name}} {{source}} --crate-type {{crate-type}} {{rustflags}}"
