# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

import("//build/ohos.gni")
import("//build/config/ohos/musl.gni")

group("musl_install") {
  deps = [ 
    ":ld-musl-arm.so.1",
    ":musl-libc.so",
    ":musl_ld_path_etc_cfg",
    ":musl-libcxx.so",
    "//third_party/musl:musl_libs"
  ]
}

ohos_prebuilt_executable("ld-musl-arm.so.1") {
  deps = [ "//third_party/musl:${musl_target_abi_name}_create_linker" ]
  _muls_linker_so = "${root_out_dir}/common/common/libc/ld-musl-${musl_arch}.so.1"
  source = _muls_linker_so
  install_enable = true
  part_name = "common"
}

ohos_prebuilt_shared_library("musl-libc.so") {
  deps = [ "//third_party/musl:${musl_target_abi_name}_libc_musl_shared" ]
  source = "${musl_sysroot}/usr/lib/${musl_target_triple}/libc.so"
  relative_install_dir = "musl"
  part_name = "common"
}

ohos_prebuilt_etc("musl_ld_path_etc_cfg") {
  if (target_cpu == "arm") {
    source = "ld-musl-arm.path"
  } else {
    source = "ld-musl-aarch64.path"
  }
  module_install_dir = "etc"
  part_name = "common"
}

ohos_prebuilt_shared_library("musl-libcxx.so") {
  if (target_cpu == "arm") {
    source = "//prebuilts/clang/ohos/linux-x86_64/llvm/lib/arm-linux-ohosmusl/c++/libc++.so"
  } else {
    source = ""
  }
  relative_install_dir = "musl"
  part_name = "common"
}
