# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

import("//build/ohos.gni")

group("musl_install") {
  deps = [
    ":ld-musl-arm.so.1",
    ":musl_ld_path_etc_cfg",
    ":musl-libc.so",
    ":musl-libcxx.so",
  ]
}

ohos_prebuilt_etc("musl_ld_path_etc_cfg") {
  if (target_cpu == "arm") {
    source = "ld-musl-arm.path"
  } else {
    source = "ld-musl-aarch64.path"
  }
  module_install_dir = "etc"
  part_name = "common"
}

ohos_prebuilt_executable("ld-musl-arm.so.1") {
  if (target_cpu == "arm") {
    source =
        "//prebuilts/lite/sysroot/usr/lib/arm-linux-ohosmusl/ld-musl-arm.so.1"
  } else {
    source = ""
  }
  install_enable = true
  part_name = "common"
}

ohos_prebuilt_shared_library("musl-libc.so") {
  if (target_cpu == "arm") {
    source = "//prebuilts/lite/sysroot/usr/lib/arm-linux-ohosmusl/libc.so"
  } else {
    source = ""
  }
  relative_install_dir = "musl"
  part_name = "common"
}

ohos_prebuilt_shared_library("musl-libcxx.so") {
  if (target_cpu == "arm") {
    source = "//prebuilts/clang/ohos/linux-x86_64/llvm/lib/arm-linux-ohosmusl/c++/libc++.so"
  } else {
    source = ""
  }
  relative_install_dir = "musl"
  part_name = "common"
}
